<resources>
    <string name="app_name">Evento</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_org_name">Organisation Name</string>
    <string name="prompt_org_email">Organisation Email</string>
    <string name="prompt_org_mobile">Organisation Contact Number</string>
    <string name="prompt_event_title">Event Title</string>
    <string name="prompt_event_describe">Event Description</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="registered">"Successfully Registered!"</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_mail">Not a valid email address</string>
    <string name="invalid_password">Password must be at least 6 characters long</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_user">Don\'t have an account? <b>Sign up.</b></string>
    <string name="already_user">Already have an account? <b>Log in.</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="mandatory">Mandatory Field!</string>
    <string name="format">Incorrect Format!</string>
    <string name="password">Password doesn\'t match!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="org_details">Organisation Details</string>
    <string name="event_details">Event Details</string>
    <string name="event_date">Date of Event</string>
    <string name="event_location">Location of Event</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="city">City</string>
    <string name="totalTicket">Total Tickets</string>
    <string name="priceTicket">Ticket Price</string>
    <string name="additionalInfo">Additional Info</string>
    <string name="ticketInfo">Ticket Info</string>
    <string name="eventType">Event Type</string>
    <string name="eventCategory">Event Category</string>
    <string name="select_type">Select Type</string>
    <string name="select_category">Select Category</string>
    <string name="about">About</string>
    <string name="contact_info">Contact Info</string>
    <string name="time_and_venue">Time and Venue</string>
    <string name="type_amp_category">Event Type &amp; Category</string>
    <string name="available_tickets">Available Tickets</string>
    <string name="MPD_action_done">Buy</string>
    <string name="organisation_info">Organisation Info</string>
    <string name="available_tickets_pricing">Available Tickets &amp; Pricing</string>
    <string name="time_title">Time</string>
    <string name="venue_title">Venue</string>
    <string name="category_title">Category</string>
    <string name="title_activity_maps">Map</string>

</resources>