<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addEvent.Add1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/description" />

        <TextView
            android:id="@+id/descTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_event_describe"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/organisation_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/orgName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/organisation" />

        <TextView
            android:id="@+id/orgNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_org_name"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/orgMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/mail" />

        <TextView
            android:id="@+id/orgMailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_org_email"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/orgContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/phone" />

        <TextView
            android:id="@+id/orgContactTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_org_mobile"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/time_and_venue"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dateOfEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/calender" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="Start"
                android:textColor="@color/hint"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startDateOfEventTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_date"
                android:paddingHorizontal="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="End"
                android:textColor="@color/hint"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endDateOfEventTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_date"
                android:paddingHorizontal="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/locationOfEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/location" />

        <TextView
            android:id="@+id/locationOfEventTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_location"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginStart="40dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        android:layout_marginTop="-10dp"
        card_view:cardUseCompatPadding="true">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            class="com.example.collegeproject.addEvent.map.WorkaroundMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".addEvent.Add2" />
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/ticketSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/available_tickets_pricing"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/totalTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ticket_quantity" />

        <TextView
            android:id="@+id/totalTicketTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/totalTicket"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/priceTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/price" />

        <TextView
            android:id="@+id/priceTicketTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priceTicket"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/type_amp_category"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/typeOfEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/type" />

        <TextView
            android:id="@+id/typeOfEventTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eventType"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/categoryOfEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingStart="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/category" />

        <TextView
            android:id="@+id/categoryOfEventTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eventCategory"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

</LinearLayout>