<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addEvent.Add3">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/ticketInfo"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/blue" />
            </LinearLayout>

            <com.libizo.CustomEditText
                android:id="@+id/totalTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/totalTicket"
                android:inputType="number"
                android:padding="15dp"
                app:libIZO_setBorderColor="@color/grey"
                app:libIZO_setBorderView="true"
                app:libIZO_setClearIconVisible="true"
                app:libIZO_setCornerRadius="10dp"
                app:libIZO_setStrokeWidth="2dp" />

            <com.libizo.CustomEditText
                android:id="@+id/priceTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/priceTicket"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:padding="15dp"
                app:libIZO_setBorderColor="@color/grey"
                app:libIZO_setBorderView="true"
                app:libIZO_setClearIconVisible="true"
                app:libIZO_setCornerRadius="10dp"
                app:libIZO_setPrefix="₹ "
                app:libIZO_setPrefixTextColor="@color/black"
                app:libIZO_setStrokeWidth="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/additionalInfo"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/blue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/eventType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/eventTypeHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventType"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/eventTypeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_type"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/eventCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/eventCategoryHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventCategory"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/eventCategoryTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_category"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp">

                <ProgressBar
                    android:id="@+id/progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="67"
                    android:progressDrawable="@drawable/progress_small" />

                <ProgressBar
                    android:id="@+id/innerProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:indeterminate="false"
                    android:max="4"
                    android:progress="0"
                    android:progressDrawable="@drawable/inner_progress" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/next"
                    android:tooltipText="Next"
                    app:elevation="0dp"
                    app:backgroundTint="@color/blue"
                    app:maxImageSize="30sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>